force-app/main/default/objects/gmpkg__Connect_Config__mdt/gmpkg__Connect_Config__mdt.object-meta.xml
<CustomObject>
    <label>Connect Config</label>
    <pluralLabel>Connect Configs</pluralLabel>
</CustomObject>