force-app/main/default/objects/gmpkg__Connect_Config__mdt/fields/gmpkg__ExternalDataSourceId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__ExternalDataSourceId__c</fullName>
    <label>External DataSource Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>