force-app/main/default/objects/gmpkg__Connect_Config__mdt/fields/gmpkg__ExternalDataSourceLabel__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__ExternalDataSourceLabel__c</fullName>
    <label>External DataSource Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>