force-app/main/default/objects/gmpkg__Connect_Config__mdt/fields/gmpkg__ExternalDataSourceName__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__ExternalDataSourceName__c</fullName>
    <label>External DataSource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>