force-app/main/default/objects/gmpkg__Connect_Config__mdt/fields/gmpkg__NamedCredentials__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__NamedCredentials__c</fullName>
    <label>Named Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>