force-app/main/default/objects/gmpkg__Connect_Config__mdt/fields/gmpkg__Options__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Options__c</fullName>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>